# russetair-battleship

./: .gitignore  .gitmodules  Cargo.toml  README.adoc  build.gradle.kts  main.c  meson.build  settings.gradle.kts
app/: build.gradle.kts
app/src/main/kotlin/: App.kt
c/: main.c  meson.build
c/src/: chunk.h  graphics.c  player.c  player.h  sector.c  spatial.c
c/src/vk/: device.c  instance.c  vk.h
resources/shaders/: nuklear.frag.glsl  nuklear.vert.glsl
src/: chunk.c  chunk.h  controls.rs  graphics.c  graphics.h  gui.c  main.rs  meson.build  player.h  sector.c  sector.h  spatial.h  tiles.c  tiles.h
src/engine/: graphics.c  gui.h  meson.build
src/engine/renderer/: clear_screen.c  clear_screen.h  clear_screen_dyn.c  clear_screen_dyn.h  gui.c  gui.h  meson.build  renderer.h
src/engine/vk/: buffer.c  buffer.h  check.h  command_buffer.c  command_buffer.h  device.c  framebuffer.c  image.c  instance.c  memory.c  memory.h  physical_device.c  physical_device.h  pipeline.c  queue.c  queue.h  render_pass.c  shader.h  swapchain.c  swapchain.h
src/graphics/: device.rs  instance.rs  mod.rs  output.rs  window.rs
src/main/kotlin/: Main.kt
src/main/kotlin/gfx/: MouseInput.kt  Renderer.kt  Window.kt
src/main/kotlin/gfx/gui/: NuklearDescriptorSetLayout.kt  NuklearFont.kt  NuklearPipeline.kt  NuklearRenderPass.kt  NuklearRenderer.kt  NuklearState.kt
src/main/kotlin/gfx/vk/: CommandPool.kt  CommandRecordable.kt  DescriptorPool.kt  DescriptorSet.kt  DescriptorSetLayout.kt  Device.kt  GraphConstants.kt  Image.kt  ImageView.kt  Instance.kt  MemoryAllocator.kt  PhysicalDevice.kt  Pipeline.kt  PipelineCache.kt  Queue.kt  RenderActivity.kt  Semaphore.kt  ShaderCompiler.kt  ShaderProgram.kt  Surface.kt  Swapchain.kt  UploadActivity.kt  VertexInputStateInfo.kt  VulkanBuffer.kt  VulkanTexture.kt  VulkanUtils.kt
src/main/kotlin/vk/: Instance.kt  VulkanUtils.kt
src/renderer/: clear_screen.c  clear_screen.h  renderer.h
src/terrain/: chunk.rs  mod.rs  sector.rs  terrain.wgsl
src/utils/: math.h
src/vk/: command_buffer.c  command_buffer.h  device.c  device.h  framebuffer.c  framebuffer.h  image.h  instance.c  instance.h  logical_device.c  logical_device.h  memory.c  memory.h  meson.build  physical_device.c  physical_device.h  pipeline.c  pipeline.h  render_pass.c  render_pass.h  swapchain.c  swapchain.h  vk.c  vk.h
subprojects/: .gitignore
