[package]
name = "russetair-battleship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytemuck = "1"

hecs = "0.9"

fltk = { version = "1", features = ["fltk-bundled", "rwh05"] }
wgpu = "0.14"

pollster = "0.2"

uv = { package = "ultraviolet", versino = "0.9" }