[workspace]

members = [
]

[package]
name = "russetair-battleship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
env_logger = "0.9"

chrono = "0.4"

bytemuck = "1"

hecs = "0.9"

winit = "0.27"
wgpu = "0.14"
pollster = "*"

iced_winit = "0.6"
iced_wgpu = "0.7"

ultraviolet = "0.9"
