[workspace]

members = [
]

[package]
name = "russetair-battleship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4"
env_logger = "0.9"

chrono = "0.4"

bytemuck = { version = "1", features=["derive"] }

hecs = "0.9"

winit = "0.27"
wgpu = "0.14"
pollster = "*"

imgui = { version = "0.9", features=["tables-api"] }
imgui-wgpu = "0.21"
imgui-winit-support = "0.9"

cgmath = "0.18"
